2011-10-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSProcessInfo.m: Add includes needed for the HAVE_PROCFS
	case.
	* Source/common.h: Correct last commit, the #endif was placed
	incorrectly.

2011-10-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/common.h: Attempt to workaroiund clang __blockproblem

2011-10-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m:
	Fix for bug #34603

2011-10-19  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: fixes for gnutls detection and to use the objc
	libraries provided by gnustep-config.

2011-10-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSFileHandle.h: remove
	* Source/GSFileHandle.h: add
	* Source/GNUmakefile: Don't install private header
	* Source/NSFileHandle.m:
	* Source/GSFileHandle.m:
	* SSL/GSSSLHandle.m:
	Update to make GSFileHandle.h: private as it should be.

2011-10-19  Sebastian Reitenbach

	* configure.ac: fix typo on gnutls detection.

2011-10-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m:
	Fix failure to load global defaults when system layout/config is
	locked down (problem reported by Julian Mayer).

2011-10-18  Richard Frith-Macdonald <rfm@gnu.org>

	* standalone.conf: example configuration file for a standalone
	package installation.
	* Documentation/Base.gsdoc:
	Documentation improvements for packaging

2011-10-17  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Make sourcing of default config file more reliable.
	* configure: regenerate.

2011-10-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m:
	* Source/NSPropertyList.m:
	* Source/NSFileHandle.m:
	* Source/NSString.m:
	* Source/DocMakefile:
	* Documentation/Base.gsdoc:
	* Headers/Foundation/NSString.h:
	* Headers/Foundation/NSBundle.h:
	Documentation cleanups.

2011-10-17  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Foundation/NSXMLNode.h:
	* Source/NSXMLNode.m:
	Fixed NSXMLNode compilation when using the "pure" non-fragile ABI 