@@ -1,3 +1,10 @@
+2011-10-24  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSAffineTransform.m (-initWithCoder:, encodeWithCoder:):
+	Don't do anything for the keyed coding case.
+	* Source/NSDictionary.m (-initWithCoder:): Add another keyed
+	coding case.
+
 2011-10-22  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSProcessInfo.m: Add includes needed for the HAVE_PROCFS
